--- a/.github/workflows/aoc-2022.yml
+++ b/.github/workflows/aoc-2022.yml
@@ -2,23 +2,26 @@ name: aoc-2022
 
 on:
   push:
-    branches: [ "main" ]
   pull_request:
-    branches: [ "main" ]
 
-env:
+env: 
   CARGO_TERM_COLOR: always
 
 jobs:
-  build:
-
+  build_and_test:
+    name: Rust project - latest
     runs-on: ubuntu-latest
-
+    strategy:
+      matrix:
+        toolchain:
+          - stable
+          - beta
+          - nightly
     steps:
-    - uses: actions/checkout@v3
-    - name: Build
-      run: cargo build --verbose
-      working-directory: ./aoc/aoc-2022
-    - name: Run tests
-      run: cd aoc/aoc-2022; cargo test --verbose
-      working-directory: ./aoc/aoc-2022
+      - uses: actions/checkout@v3
+      - run: rustup update ${{ matrix.toolchain }} && rustup default ${{ matrix.toolchain }}
+      - run: cargo build --verbose
+        working-directory: ./aoc/aoc-2022
+      - run: cargo test --verbose
+        working-directory: ./aoc/aoc-2022
+  
