--- a/.github/workflows/aoc-2022.yml
+++ b/.github/workflows/aoc-2022.yml
@@ -15,6 +15,8 @@ jobs:
       matrix:
         toolchain:
           - stable
+          - beta
+          - nightly
           
     steps:
       - uses: actions/checkout@v3
