"day02 should be done now?"

--- a/aoc/aoc-2018/src/makefile
+++ b/aoc/aoc-2018/src/makefile
@@ -1,11 +1,13 @@
 IDIR =../include
 CC=gcc
-CFLAGS=-I$(IDIR)
+CFLAGS=-I$(IDIR) -Wall
 
 ODIR=obj
 LDIR =../src
+LIBDIR =../lib
+SOLDIR =../sol
 
-LIBS=-lm
+LIBS=
 
 _DEPS = dictionary.h
 DEPS = $(patsubst %,$(IDIR)/%,$(_DEPS))
@@ -13,12 +15,15 @@ DEPS = $(patsubst %,$(IDIR)/%,$(_DEPS))
 _OBJ = dictionary.o
 OBJ = $(patsubst %,$(ODIR)/%,$(_OBJ))
 
+_SOL = day01.o
+SOL = $(patsubst %,$(ODIR)/%,$(_OBJ))
 
-$(ODIR)/%.o: %.c $(DEPS)
+
+$(ODIR)/%.o: $(LIBDIR)/%.c $(DEPS)
 	$(CC) -c -o $@ $< $(CFLAGS)
 
-hellomake: $(OBJ)
-	$(CC) -o $@ $^ $(CFLAGS) $(LIBS)
+day02: $(OBJ)
+	$(CC) -o $@ $(SOLDIR)/$@.c $^ $(CFLAGS) $(LIBS)
 
 .PHONY: clean
 
